jilles      2006/01/20 16:38:15 UTC	(20060120-4631)
  Log:
  - allow me::mta unspecified, this disables email support
    (explicit error message, ns/us set emailmemos on denied;
    this used to crash on rehash)
  - return failure instead of success in sendemail() on windows
  

  Changes:	Modified:
  +5 -0		trunk/modules/nickserv/set.c (File Modified) 
  +5 -0		trunk/modules/userserv/set.c (File Modified) 
  +1 -1		trunk/src/conf.c (File Modified) 
  +8 -1		trunk/src/function.c (File Modified) 


jilles      2006/01/20 12:23:21 UTC	(20060120-4629)
  Log:
  P10: Process received CLEARMODE and OPMODE.
  

  Changes:	Modified:
  +71 -0	trunk/protocol/asuka.c (File Modified) 
  +71 -0	trunk/protocol/bircd.c (File Modified) 
  +71 -0	trunk/protocol/undernet.c (File Modified) 


jilles      2006/01/20 11:51:44 UTC	(20060120-4627)
  Log:
  P10: fix comment at start of file.
  

  Changes:	Modified:
  +3 -3		trunk/protocol/asuka.c (File Modified) 
  +3 -3		trunk/protocol/bircd.c (File Modified) 
  +3 -3		trunk/protocol/undernet.c (File Modified) 


jilles      2006/01/20 02:43:59 UTC	(20060120-4625)
  Log:
  Um, no such function myuser_find_named().
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/register.c (File Modified) 


jilles      2006/01/20 01:57:35 UTC	(20060120-4623)
  Log:
  P10: ircd_on_login() takes nick not uid.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/asuka.c (File Modified) 
  +1 -1		trunk/protocol/bircd.c (File Modified) 
  +1 -1		trunk/protocol/undernet.c (File Modified) 


jilles      2006/01/20 01:44:46 UTC	(20060120-4621)
  Log:
  P10: keep track of user IP addresses.
  

  Changes:	Modified:
  +1 -0		trunk/include/extern.h (File Modified) 
  +7 -1		trunk/protocol/asuka.c (File Modified) 
  +7 -1		trunk/protocol/bircd.c (File Modified) 
  +7 -1		trunk/protocol/undernet.c (File Modified) 
  +33 -0	trunk/src/ubase64.c (File Modified) 


jilles      2006/01/20 00:27:51 UTC	(20060120-4619)
  Log: