@@ -1,3 +1,14 @@
+jilles      2006/01/21 14:44:45 UTC	(20060121-4633)
+  Log:
+  P10: only acknowledge END_OF_BURST from our uplink, not from other servers.
+  
+
+  Changes:	Modified:
+  +5 -1		trunk/protocol/asuka.c (File Modified) 
+  +5 -1		trunk/protocol/bircd.c (File Modified) 
+  +5 -1		trunk/protocol/undernet.c (File Modified) 
+
+
 jilles      2006/01/20 16:38:15 UTC	(20060120-4631)
   Log:
   - allow me::mta unspecified, this disables email support
